--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <audio src="./music/menu-music.wav" loop></audio>
-    <audio src="./music/battle-music.wav" loop></audio>
+    <audio src="./music/menu-music.mp3" loop></audio>
+    <audio src="./music/battle-music.mp3" loop></audio>
     <script src="./js/main.js" defer type="module"></script>
     <title>NovaDuel</title>
 </head>
