--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="style.css">
     <audio src="./music/menu-music.mp3" loop></audio>
     <audio src="./music/battle-music.mp3" loop></audio>
+    <audio src="./music/enemy-scream1.mp3"></audio>
+    <audio src="./music/enemy-scream2.mp3"></audio>
+    <audio src="./music/enemy-scream3.mp3"></audio>
+    <audio src="./music/enemy-scream4.mp3"></audio>
+    <audio src="./music/enemy-scream5.mp3"></audio>
+    <audio src="./music/enemy-die.mp3"></audio>
+    <audio src="./music/you-win.mp3"></audio>
+    <audio src="./music/game-over.mp3"></audio>
     <script src="./js/main.js" defer type="module"></script>
     <title>NovaDuel</title>
 </head>
