resources: changed mp3 files to mastered ones so we can hear properly with the music

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <audio src="./music/menu-music.mp3" loop></audio>
     <audio src="./music/battle-music.mp3" loop></audio>
-    <audio src="./music/basicattack.mp3"></audio>
-    <audio src="./music/specialattack.mp3"></audio>
+    <audio src="./music/basic-attack.mp3"></audio>
+    <audio src="./music/special-attack.mp3"></audio>
     <audio src="./music/heal.mp3"></audio>
     <audio src="./music/enemy-scream1.mp3"></audio>
     <audio src="./music/enemy-scream2.mp3"></audio>
