--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <audio src="./music/menu-music.mp3" loop></audio>
+    <audio src="./music/click.mp3"></audio>
+    <audio src="./music/start.mp3"></audio>
     <audio src="./music/battle-music.mp3" loop></audio>
     <audio src="./music/basic-attack.mp3"></audio>
     <audio src="./music/special-attack.mp3"></audio>
@@ -18,6 +20,7 @@
     <audio src="./music/enemy-scream4.mp3"></audio>
     <audio src="./music/enemy-scream5.mp3"></audio>
     <audio src="./music/enemy-die.mp3"></audio>
+    <audio src="./music/lost.mp3"></audio>
     <audio src="./music/you-win.mp3"></audio>
     <audio src="./music/game-over.mp3"></audio>
     <script src="./js/main.js" defer type="module"></script>
