adding styles in action buttons

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             <div id="enemy" class="pj"></div>
         </div>
         <div id="actions">
-            <div id="buttons">
-                <button id="basic-attack" class="btn">Ataque Basico</button>
-                <button id="special-attack" class="btn">Ataque Especial</button>
-                <button id="heal-action" class="btn">Curarse</button>
+            <div id="buttons" class="buttons">
+                <button id="basic-attack" title="attack" type="button" class="btn attack"></button>
+                <button id="special-attack" title="special" type="button" class="btn special"></button>
+                <button id="heal-action" type="button" class="btn heal">Curarse</button>
             </div>
         </div>
     </div>
