feat: rain added to menu and battle / fix: loops for songs/ feat: start button 3d effect

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <audio src="./music/menu-music.mp3" loop></audio>
+    <audio src="./music/rain-menu.mp3"></audio>
+    <audio src="./music/menu-music.mp3"></audio>
     <audio src="./music/click.mp3"></audio>
     <audio src="./music/start.mp3"></audio>
-    <audio src="./music/battle-music.mp3" loop></audio>
+    <audio src="./music/rain.mp3"></audio>
+    <audio src="./music/battle-music.mp3"></audio>
     <audio src="./music/basic-attack.mp3"></audio>
     <audio src="./music/special-attack.mp3"></audio>
     <audio src="./music/heal.mp3"></audio>
